--- a/flat/templates/index.html
+++ b/flat/templates/index.html
@@ -2,17 +2,17 @@
 
 
 {% block main %}
-<img id="logo" src="/style/logo.svg" alt="FoLiA Linguistic Annotation Tool" />
+<img id="logo" src="{{base_prefix}}/style/logo.svg" alt="FoLiA Linguistic Annotation Tool" />
 
 <div id="uploadform" class="dialog">
     <h3>Upload</h3>
     <p>
     Here you can upload a new document to the editor.
     </p>
-    <form action="/upload/" enctype="multipart/form-data" method="post">
+    <form action="{{base_prefix}}/upload/" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <label>Select file:</label> <input type="file" name="file" /><br/>
-        <label>Namespace:</label> 
+        <label>Namespace:</label>
         <select name="namespace">
             {% if namespace %}
             <option value="{{namespace}}" selected="selected">{{namespace}}</option>
@@ -44,7 +44,7 @@
 
 <div id="adddirectoryform" class="dialog">
     <h3>Add Directory</h3>
-    <form action="/addnamespace/" enctype="multipart/form-data" method="post">
+    <form action="{{base_prefix}}/addnamespace/" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <label>Namespace: </label> {{namespace}}<br />
         <label>New directory: </label> <input type="text" name="newdirectory" value="" />
@@ -77,27 +77,27 @@
     {% if namespace or subdirs %}
         <ul id="dirlist">
         {% if namespace %}
-            <li><a href="/index/{{parentdir}}">../</a></li>
+            <li><a href="{{base_prefix}}/index/{{parentdir}}">../</a></li>
         {% endif %}
         {% for dir in subdirs %}
             {% if namespace %}
-                <li><a href="/index/{{namespace}}/{{dir}}">{{dir}}/</a></li>
+                <li><a href="{{base_prefix}}/index/{{namespace}}/{{dir}}">{{dir}}/</a></li>
             {% else %}
-                <li><a href="/index/{{dir}}">{{dir}}/</a></li>
+                <li><a href="{{base_prefix}}/index/{{dir}}">{{dir}}/</a></li>
             {% endif %}
         {% endfor %}
         </ul>
     {% endif %}
-    <form id="filemanform" action="/filemanagement/" method="post"/>
+    <form id="filemanform" action="{{base_prefix}}/filemanagement/" method="post"/>
     {% csrf_token %}
     {% if docs %}
         <ul id="doclist">
         {% for doc, size, timestamp, metaitems  in docs %}
-        <li>{%if allowcopy or allowdelete %}<input type="checkbox" name="docselect{{forloop.counter0}}" value="{{namespace}}/{{doc}}"/>{%endif%} <a href="/{{ defaultmode }}/{{ namespace }}/{{ doc }}/" onclick="index_click();">{{ doc }}</a> <span>{{size}}MB &nbsp;&nbsp; <em>{{ timestamp }}</em></span> <span>[<a href="/download/{{ namespace }}/{{ doc }}.folia.xml">Download</a>]</span>
+        <li>{%if allowcopy or allowdelete %}<input type="checkbox" name="docselect{{forloop.counter0}}" value="{{namespace}}/{{doc}}"/>{%endif%} <a href="{{base_prefix}}/{{ defaultmode }}/{{ namespace }}/{{ doc }}/" onclick="index_click();">{{ doc }}</a> <span>{{size}}MB &nbsp;&nbsp; <em>{{ timestamp }}</em></span> <span>[<a href="{{base_prefix}}/download/{{ namespace }}/{{ doc }}.folia.xml">Download</a>]</span>
             <span>
             {% for key, value in metaitems %}
             {{key}}: {{value}} &nbsp;
-            {% endfor %} 
+            {% endfor %}
             </span> </li>
         {% endfor %}
         </ul>
@@ -108,7 +108,7 @@
         <h4>Document Management Operations</h4>
         <input type="hidden" id="filemanmode" name="filemanmode" value="" />
         {% if allowcopy %}
-        <button id="copybutton" onclick="submitfilemanager('copy')">Copy</button> selected documents to 
+        <button id="copybutton" onclick="submitfilemanager('copy')">Copy</button> selected documents to
         <select name="copytarget">
             {% for dir in recursivedirs %}
             {% if dir != namespace %}
@@ -118,7 +118,7 @@
         </select><br/>
         {% endif %}
         {% if allowcopy and allowdelete %}
-        <button id="movebutton" onclick="submitfilemanager('move')">Move</button> selected documents to 
+        <button id="movebutton" onclick="submitfilemanager('move')">Move</button> selected documents to
         <select name="movetarget">
             {% for dir in recursivedirs %}
             {% if dir != namespace %}
