--- a/flat/templates/register.html
+++ b/flat/templates/register.html
@@ -3,7 +3,7 @@
 {% block title %}Create an account{% endblock %}
 
 {% block main %}
-<img id="logo" src="/style/logo.svg" alt="FoLiA Linguistic Annotation Tool" />
+<img id="logo" src="{{base_prefix}}/style/logo.svg" alt="FoLiA Linguistic Annotation Tool" />
 <div id="logindialog" class="dialog">
   <h3>Create an account</h3>
     <form action="" method="post">
