--- a/flat/modes/viewer/templates/viewer.html
+++ b/flat/modes/viewer/templates/viewer.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block head %}
-<link rel="stylesheet" href="/style/treeview.css" type="text/css" />
-<script type="text/javascript" src="/style/svg-tree-drawer.js"></script> 
+<link rel="stylesheet" href="{{base_prefix}}/style/treeview.css" type="text/css" />
+<script type="text/javascript" src="{{base_prefix}}/style/svg-tree-drawer.js"></script>
 {% endblock %}
 
 {% block menu %}
