further work on provenance

--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -38,6 +38,7 @@
             {% endif %}
             {% if docdeclarations %}
             initialdeclarationlist = {{ docdeclarations|safe }};
+            provenance = {{ provenance|safe }};
             {% endif %}
             {% if setdefinitions %}
             setdefinitions = {{ setdefinitions|safe }};
