--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -3,9 +3,9 @@
 {% block head %}
 <!-- dependencies -->
 <link rel="StyleSheet" href="{{base_prefix}}/style/flat.viewer.css" type="text/css" />
-<script type="text/javascript" src="{{base_prefix}}/style/flat.viewer.js"></script>
+<script type="text/javascript" src="{{base_prefix}}/script/flat.viewer.js"></script>
 <link rel="stylesheet" href="{{base_prefix}}/style/treeview.css" type="text/css" />
-<script type="text/javascript" src="{{base_prefix}}/style/svg-tree-drawer.js"></script>
+<script type="text/javascript" src="{{base_prefix}}/script/svg-tree-drawer.js"></script>
 {% endblock %}
 
 {% block js %}
