--- a/flat/modes/viewer/templates/viewer.html
+++ b/flat/modes/viewer/templates/viewer.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="{{base_prefix}}/style/treeview.css" type="text/css" />
-<script type="text/javascript" src="{{base_prefix}}/style/svg-tree-drawer.js"></script>
+<script type="text/javascript" src="{{base_prefix}}/script/svg-tree-drawer.js"></script>
 {% endblock %}
 
 {% block menu %}
