--- a/flat/style/flat.viewer.css
+++ b/flat/style/flat.viewer.css
@@ -12,7 +12,7 @@ div.s, div.w,div.hiddenw,div.part,div.s div.quote,div.p div.quote {
     display: inline-block;
 }
 div.hiddenw {
-    color: #000;
+    color: #aaa;
 }
 span.ab { /*annotation box*/
     display: none;
