minor style update

--- a/flat/style/flat.viewer.css
+++ b/flat/style/flat.viewer.css
@@ -170,7 +170,7 @@ div#viewer th {
 div#info th span.setname {
     font-weight: normal;
     font-size: 7pt;
-    color: #a42727;
+    color: #666;
     padding-left: 10px;
     overflow-wrap: break-word;
     word-wrap: break-word;
