--- a/flat/style/flat.editor.css
+++ b/flat/style/flat.editor.css
@@ -43,7 +43,7 @@ div#editor th span.setname {
     font-weight: normal;
     padding-left: 10px;
     font-size: 7pt;
-    color: #a42727;
+    color: #666;
 }
 div#editor td {
     width: 70%;
@@ -69,6 +69,7 @@ div#editor div#id {
 div#editor .setname {
     font-size: 8px;
     font-style: italic;
+    color: #666;
 }
 div#editor .buttoncontainer span {
     padding-left: 10px;
