show warning when loading set definition fails #147

--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -43,6 +43,11 @@
             {% endif %}
             {% if setdefinitions %}
             setdefinitions = {{ setdefinitions|safe }};
+            {% if failedsetdefinition %}
+            failedsetdefinitions = {{ failedsetdefinitions|safe }};
+            {% else %}
+            failedsetdefinitions = [];
+            {% endif %}
             {% endif %}
             {% if excludeclasses %}
             excludeclasses = {{ excludeclasses|safe }};
