--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -43,7 +43,7 @@
             {% endif %}
             {% if setdefinitions %}
             setdefinitions = {{ setdefinitions|safe }};
-            {% if failedsetdefinition %}
+            {% if failedsetdefinitions %}
             failedsetdefinitions = {{ failedsetdefinitions|safe }};
             {% else %}
             failedsetdefinitions = [];
