--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="{{base_prefix}}/script/jquery-3.1.0.min.js"></script>
         <script type="text/javascript" src="{{base_prefix}}/script/jquery-ui.min.js"></script>
         {% if namespace == "testflat" and docid != "manual" %}
-            <link rel="StyleSheet" href="{{base_prefix}}/script/qunit-1.17.1.css" type="text/css" />
+            <link rel="StyleSheet" href="{{base_prefix}}/style/qunit-1.17.1.css" type="text/css" />
             <script type="text/javascript" src="{{base_prefix}}/script/qunit-1.17.1.js"></script>
             <script type="text/javascript" src="{{base_prefix}}/script/testflat.js"></script>
         {% endif %}
