--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -6,7 +6,7 @@
         {% if docid %}
         <title>FLAT :: {{docid }}</title>
         {% else %}
-        <title>FLAT: FoLiA Linguistic Annotation Tool</title>
+        <title>FLAT: the FoLiA Linguistic Annotation Tool</title>
         {% endif %}
         <script type="text/javascript" src="{{base_prefix}}/script/jquery-3.1.0.min.js"></script>
         <script type="text/javascript" src="{{base_prefix}}/script/jquery-ui.min.js"></script>
@@ -115,6 +115,7 @@
                             {% if isadmin %}
                             <li><a href="{{base_prefix}}/admin/">Administation</a></li>
                             {% endif %}
+                            <li><a href="https://flat.readthedocs.io/en/latest/user_guide.html">Documentation</a></li>
                             <li><a href="{{base_prefix}}/account/password_change/">Change password</a></li>
                             <li><a href="{{base_prefix}}/logout/">Log out</a></li>
                         </ul>
@@ -150,7 +151,9 @@
         </div>
 
         <div id="footer">
-            <a href="https://proycon.github.io/folia"><strong>FLAT: FoLiA Linguistic Annotation Tool</strong></a> v{{ version }} - by Maarten van Gompel - Centre for Language and Speech Technology - Radboud University Nijmegen
+            <a href="https://github.com/proycon/flat"><strong>FLAT: the FoLiA Linguistic Annotation Tool</strong></a> v{{ version }} - by Maarten van Gompel - <a href="https://ru.nl/clst">Centre for Language and Speech Technology</a> - Radboud University Nijmegen<br/>
+            <strong>FLAT</strong> is funded by <a href="https://clariah.nl">CLARIAH</a><br/>
+            <a href='https://flat.readthedocs.io/en/latest/?badge=latest'><img src='https://readthedocs.org/projects/flat/badge/?version=latest' alt='Documentation Status' /></a> <a href="https://zenodo.org/badge/latestdoi/15584383"><img src="https://zenodo.org/badge/15584383.svg" alt="DOI" /></a>
         </div>
     {% endif %}
     </body>
