added github badges:

--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -153,7 +153,7 @@
         <div id="footer">
             <a href="https://github.com/proycon/flat"><strong>FLAT: the FoLiA Linguistic Annotation Tool</strong></a> v{{ version }} - by Maarten van Gompel - <a href="https://ru.nl/clst">Centre for Language and Speech Technology</a> - Radboud University Nijmegen<br/>
             <strong>FLAT</strong> is funded by <a href="https://clariah.nl">CLARIAH</a><br/>
-            <a href='https://flat.readthedocs.io/en/latest/?badge=latest'><img src='https://readthedocs.org/projects/flat/badge/?version=latest' alt='Documentation Status' /></a> <a href="https://zenodo.org/badge/latestdoi/15584383"><img src="https://zenodo.org/badge/15584383.svg" alt="DOI" /></a>
+            <a href="https://github.com/proycon/flat"><img src="https://img.shields.io/github/stars/proycon/flat.svg?style=social" alt="GitHub" /></a> <a href="https://github.com/proycon/flat/issues"><img src="https://img.shields.io/github/issues/proycon/flat.svg" alt="GitHub Issues" /></a> <a href='https://flat.readthedocs.io/en/latest/?badge=latest'><img src='https://readthedocs.org/projects/flat/badge/?version=latest' alt='Documentation Status' /></a> <a href="https://zenodo.org/badge/latestdoi/15584383"><img src="https://zenodo.org/badge/15584383.svg" alt="DOI" /></a>
         </div>
     {% endif %}
     </body>
