implementing display of alternatives (and a new menu toggle to enable/disable this behaviour) #149

--- a/flat/modes/viewer/templates/viewertoolsandoptions.html
+++ b/flat/modes/viewer/templates/viewertoolsandoptions.html
@@ -6,5 +6,6 @@
     {% endif %}
     <li><a href="{{base_prefix}}/download/{{ namespace }}/{{ docid }}.folia.xml">View FoLiA XML source</a></li>
     <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
+    <li id="togglealternatives"><a href="javascript:togglealternatives()">Show alternative annotations</a></li>
     <li id="toggleoriginal"><a href="javascript:toggleoriginal()">Show text prior to correction</a></li>
     <li id="toggledeletions"><a href="javascript:toggledeletions()">Show deletions &amp; suggested insertions</a></li>
