major refactoring of showeditor() function (split a lot of stuff out into separate functions), implementing support to edit the structure class in the form (#152); also implemented a fallback in case a set definition does not define labels.

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -63,6 +63,8 @@ initialcorrectionset = '{{ initialcorrectionset }}';
 <div id="editor">
     <div id="editorheader">
         <span>Annotation Editor</span>
+        <span id="editortype"></span>
+        <span id="editorclass" class="class"></span>
         <button id="editordiscard">x</button>
     </div>
     <div class="body">
