working on the editor interface for relations and their link references + preparations to implement a new link selector #84

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -87,6 +87,12 @@ initialcorrectionset = '{{ initialcorrectionset }}';
         <button id="editorsubmit" title="Submit the annotation">Ok</button>
     </div>
 </div>
+<div id="viewer">
+    <div id="viewerheader">
+        <span>Annotation Viewer</span>
+        <button id="viewerdiscard">x</button>
+    </div>
+</div>
 <div id="newdeclaration" class="dialog">
     <div id="newdeclarationheader">
         <span>Declare New Annotation Type</span>
