--- a/flat/style/flat.editor.css
+++ b/flat/style/flat.editor.css
@@ -288,4 +288,14 @@ div.confidenceeditor div {
     max-width: 320px;
     overflow: hidden;
 }
-
+div.pendinglinkrefs {
+    color: red;
+    font-size: 80%;
+}
+button.addlinkrefs {
+    font-size: 80%;
+}
+button.linkselectoron {
+    background: yellow;
+    color: black;
+}
