open the viewer when the linkselector is active #84 (c)

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -92,6 +92,8 @@ initialcorrectionset = '{{ initialcorrectionset }}';
         <span>Annotation Viewer</span>
         <button id="viewerdiscard">x</button>
     </div>
+    <div class="body">
+    </div>
 </div>
 <div id="newdeclaration" class="dialog">
     <div id="newdeclarationheader">
